compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TraitClassObjectField.java
public abstract interface TraitClassObjectField /* TraitClassObjectField*/ {
  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() TraitClassObjectField.Companion Companion;

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() java.lang.String x = "" /* initializer type: java.lang.String */ /* constant value  */;

  public static final class Companion /* TraitClassObjectField.Companion*/ {
    @org.jetbrains.annotations.NotNull()
    public static final @org.jetbrains.annotations.NotNull() java.lang.String x = "" /* initializer type: java.lang.String */ /* constant value  */;

    @org.jetbrains.annotations.Nullable()
    private static final @org.jetbrains.annotations.Nullable() java.lang.String y;

    private  Companion();//  .ctor()
  }
}
